--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -2,13 +2,23 @@
   display: flex;
   flex-direction: row;
   list-style: none;
+  padding: 0;
 }
 
-.menu__item {
-  padding: 0 10px;
+.menu__item:not(:first-child) {
+  padding-left: 10px;
+}
+.menu__item:not(:last-child) {
+  padding-right: 10px;
 }
 
-.menu__item_active {
+.menu__link {
+  color: black;
+  text-decoration: none;
+}
+
+.menu__link:hover,
+.menu__link_active {
   color: rgb(0, 188, 212);
   border-bottom: 2px solid rgb(0, 188, 212);
 }
