Changed transaction style

--- a/src/styles/transaction.css
+++ b/src/styles/transaction.css
@@ -1,3 +1,11 @@
+.transaction:hover .transaction__toolbar {
+  opacity: 1;
+}
+
+.transaction__toolbar {
+  opacity: 0;
+}
+
 .transaction__type_income {
   color: green;
 }
