Add some styles

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,11 @@
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .menu {
   display: flex;
   flex-direction: row;
