--- a/src/styles/transaction.css
+++ b/src/styles/transaction.css
@@ -1,3 +1,8 @@
+.transaction-list th,
+.transaction-list td {
+  text-align: center !important;
+}
+
 .transaction:hover .transaction__toolbar {
   opacity: 1;
 }
