--- a/src/styles/category.css
+++ b/src/styles/category.css
@@ -3,8 +3,8 @@
 }
 
 .category {
-  height: 100px;
-  width: 100px;
+  height: 125px;
+  width: 125px;
   margin: 20px;
 }
 
@@ -12,4 +12,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+.category__name {
+  margin-top: 5px;
+  text-transform: uppercase;
 }
