Add hover effect

--- a/src/styles/category.css
+++ b/src/styles/category.css
@@ -8,6 +8,10 @@
   margin: 20px;
 }
 
+.category-list .category:hover {
+  box-shadow: rgba(0, 0, 0, 0.156863) 0px 3px 10px, rgba(0, 0, 0, 0.227451) 0px 3px 10px !important;
+}
+
 .category__content {
   display: flex;
   flex-direction: column;
